# ososedki_dl

./: .gitignore  CHANGELOG.md  Makefile  README.md  benchmark.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  demo.tape  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: automerge-dependabot-prs.yml  demo-animation.yml  labeler.yml  release.yml  tests.yml
bench_results/: samples_136d706758d03ca9_cs131072.csv  samples_136d706758d03ca9_cs16384.csv  samples_136d706758d03ca9_cs32768.csv  samples_136d706758d03ca9_cs65536.csv  samples_136d706758d03ca9_cs8192.csv  summary_136d706758d03ca9.csv
ososedki_dl/: __main__.py  cli.py  commands.py  config.py  consts.py  download.py  logs.py  progress.py  scrapper.py  utils.py
ososedki_dl/crawlers/: __init__.py  _base_crawler.py  _common.py  base_crawler.py  bunkrr_albums.py  cosplayasian.py  cosplayboobs.py  cosplayrule34.py  cosplaythots.py  cosxuxi_club.py  eromexxx.py  fapello_is.py  husvjjal_blogspot.py  ocosplay.py  ososedki.py  ososedki_crawler.py  pinterest.py  simple_crawler.py  sorrymother.py  stripchat.py  thefappening_plus.py  vipthots.py  waifubitches.py  wildskirts.py
ososedki_dl/crawlers/depvailon/: __init__.py  baobua.py  cosxuxi_club.py  depvailon.py  lootiu.py  thismorefun.py
ososedki_dl/crawlers/ososedki/: __init__.py  cosplayasian.py  cosplayboobs.py  cosplaykittys.py  cosplayleaks.py  cosplayrule34.py  cosplaysosedki.py  cosplaythots.py  hentaibitches.py  hentailib.py  ocosplay.py  ososedki.py  vipthots.py  waifubitches.py
ososedki_dl/crawlers/other/: __init__.py  bunkrr_albums.py  cosxuxi_club.py  eromexxx.py  fapello_is.py  husvjjal_blogspot.py  kaizty.py  nungvl.py  sorrymother.py  wildskirts.py
