[project]
name = "ososedki_dl"
version = "1.1.0"
description = "Blazing bulk web scraper for leak sites"
license = "GPL-3.0-only"
authors = [
  { name = "Alejandro González Momblán", email = "agelrenorenardo@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
  "aiofiles>=24.1.0",
  "aiohttp>=3.8",
  "aiohttp-client-cache>=0.13.0",
  "beautifulsoup4>=4.12.2",
  "core-helpers>=1.3.1",
  "fake-useragent>=1.5.1",
  "requests>=2.31.0",
  "rich>=13.5.3",
  "tldextract>=5.1.2",
  "validators>=0.*",
]

[project.urls]
repository = "https://github.com/YisusChrist/ososedki_dl"

[project.scripts]
ososedki_dl = "ososedki_dl.__main__:main"

[tool.poetry.group.dev.dependencies]
requests-pprint = "^1.0.1"

[tool.poetry.group.types.dependencies]
types-aiofiles = ">=24.1.0.20241221"
types-beautifulsoup4 = ">=4.12.0.20241020"
types-pygments = ">=2.18.0.20240506"
types-requests = ">=2.32.0.20241016"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
